--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
    background-size: cover;
    background-position: center;
    margin: -10px;
+   padding: -20px;
 }
 
 .App-logo {
@@ -27,8 +28,15 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
   padding: 10px;
   font-size: calc(10px + 2vmin);
   color: white;
-
 }
+
+.Search-bar{
+  padding-bottom: 50px;
+  align-items: flex-end ;
+  
+}
+  
+
 
 .App-link {
   color: #236476;
